@@ -1,3 +1,11 @@
+2008-05-04  Geoffrey Garen  <ggaren@apple.com>
+
+        Rubber stamped by Sam Weinig.
+        
+        Cleaned up Machine.cpp according to our style guidelines: moved static
+        data to the top of the file; moved stand-alone functions below that;
+        moved the Machine constructor above other Machine member functions.
+
 2008-05-03  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Sam.
